tests/NormalTests/paczka1/small_fuzzy/30155845.err
Error in line 3: pMgNzt1X A716 59,4
Error in line 5: pMgNzt1X A662 12,5
Error in line 10: HNkEf2r A342 48,7
Error in line 14: S864 A342 61,3
